# greynet

./: .gitignore  LICENSE-APACHE.txt  README.md
docs/: Greynet_ manual_1.md  Greynet_an_overview.md  Greynet_manual_2.md  greynet_quickstart.md
examples/: Cargo.toml
examples/demo_1/: Cargo.toml
examples/demo_1/src/: main.rs
examples/demo_2/: Cargo.toml
examples/demo_2/src/: main.rs
examples/greynet_core/: Cargo.toml
examples/greynet_core/src/: main.rs
examples/individual_constraint_matching/: Cargo.toml
examples/individual_constraint_matching/src/: main.rs
examples/stress_1/: Cargo.toml
examples/stress_1/src/: main.rs
examples/stress_zero/: Cargo.toml
examples/stress_zero/src/: main.rs
greynet/: Cargo.toml  README.md
greynet/src/: advanced_index.rs  analysis.rs  arena.rs  collectors.rs  common_ops.rs  constraint.rs  constraint_builder.rs  ergonomic_builders.rs  error.rs  fact.rs  fact_impls.rs  factory.rs  join_adapters.rs  joiner.rs  lib.rs  node_operations.rs  node_sharing.rs  nodes.rs  packed_indices.rs  resource_limits.rs  scheduler.rs  score.rs  session.rs  simd_ops.rs  sparse_set.rs  state.rs  stream_def.rs  streams_zero_copy.rs  tuple.rs  uni_index.rs  utils.rs
