[package]
name = "greynet"
edition = "2021"
version = "0.5.3"
authors = ["CameleoGrey (Egor Chnegov) <cameleogrey@yandex.ru>"]
repository = "https://github.com/CameleoGrey/greynet/"
documentation = "https://github.com/CameleoGrey/greynet/docs"
description = "High performance rule and constraint satisfaction engine"
license = "Apache-2.0"
keywords = ["greynet", "rule-engine", "engine", "greyjack", "solver"]
categories = [
    "mathematics",
	"science",
    "algorithms",
    "data-structures",
	"web-programming"
]

[dependencies]
rustc-hash = "2.1.1"
smallvec = "1.10"
lazy_static = "1.4"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v3", "v4", "v5"] }
slotmap = "1.0.7"
generational-arena = "0.2.9"
